# phoenix-analytics

./: README.md  devnet_markets.json  docker-compose.yaml  mainnet_markets.json
indexer/: .example.env  .gitignore  Cargo.toml
indexer/src/: lib.rs  logging.rs  main.rs  pubsub.rs  rpc.rs  txn.rs
initializer/: Dockerfile  go.mod  go.sum  main.go
playground/: explorer.ipynb  pyproject.toml
trino/catalog/: iceberg.properties
