[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
env_logger = "0.10.1"
log = "0.4.20"
serde_json = "1.0.108"
solana-client = "1.17.13"
solana-program = "1.17.13"
solana-sdk = "1.17.13"
solana-transaction-status = "1.17.13"
