[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
dotenv = "0.15.0"
env_logger = "0.10.1"
kafka = "0.10.0"
log = "0.4.20"
serde = "1.0.194"
serde_json = "1.0.108"
solana-client = "1.18.11"
solana-program = "1.18.11"
solana-sdk = "1.18.11"
solana-transaction-status = "1.18.11"
